--- a/15blog-interno.html
+++ b/15blog-interno.html
@@ -124,53 +124,53 @@
 						</div>
 						<div class="col-md-3 pl-2">
 							<div class="col-md-12 pt-3">
-								<div class="relative">
+								<div class="relative mb-3">
 									<img src="assets/images/jurado1.png">
 									<div class="titulo-destacado text-center">
-										<h5 class="font-Museo pb-1"><strong>HUGO DÍAZ</strong></h5>
-										<p class="fs-15">Autor del blog</p>
+										<h5 class="font-Museo p-m-0"><strong>HUGO DÍAZ</strong></h5>
+										<p class="fs-13">Autor del blog</p>
 									</div>
 								</div>
 								<p class="text-gray fs-13 pt-3 text-justify">Soy planificador de la educación, especialista en el estudio y evaluación de políticas educativas. El Blog que les presento, sobre Desafíos de Educación Siglo XXI, tiene por finalidad analizar el estado actual de la educación en el Perú; en especial, la situación de la educación básica, la formación y el desarrollo profesional de los docentes. En ese contexto, se destacan los avances, las dificultades, las experiencias relevantes, los esfuerzos encaminados a consensuar estrategias, las posiciones encontradas."</p>
 							</div>
-							<div class="col-md-12 bg-2 recursos mb-3">
-								<p class="font-Museo text-azul pb-3 fs-15 pt-3">MATERIALES</p>
+							<div class="col-md-12 bg-2 recursos mb-3 p-3 fs-13 text-gray">
+								<p class="font-Museo text-azul pb-3 pt-3">MATERIALES</p>
 								<ul type = disk class="pl-10">
-									<li class="text-gray fs-13 pb-3">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</li>
-									<li class="text-gray fs-13 pb-3">Competencia digital y currículo</li>
-									<li class="text-gray fs-13 pb-3">Informe de Educación: preparando inicio de clases</li>
-									<li class="text-gray fs-13 pb-3">Resolución Viceministerial Nº 003-2015-Minedu</li>
-									<li class="text-gray fs-13 pb-3">Docentes interinos</li>
+									<li class="pb-3">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</li>
+									<li class="pb-3">Competencia digital y currículo</li>
+									<li class="pb-3">Informe de Educación: preparando inicio de clases</li>
+									<li class="pb-3">Resolución Viceministerial Nº 003-2015-Minedu</li>
+									<li class="pb-3">Docentes interinos</li>
 								</ul>		
 							</div>	
-							<div class="col-md-12 bg-1 recursos mb-3">
-								<p class="font-Museo text-azul pb-3 fs-15 pt-3">LO MÁS LEÍDO</p>
+							<div class="col-md-12 bg-1 recursos mb-3 p-3 fs-13 text-gray">
+								<p class="font-Museo text-azul pb-3 pt-3">LO MÁS LEÍDO</p>
 								<ul type = disk class="pl-10">
-									<li class="text-gray fs-13 pb-3">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</li>
-									<li class="text-gray fs-13 pb-3">Competencia digital y currículo</li>
-									<li class="text-gray fs-13 pb-3">Informe de Educación: preparando inicio de clases</li>
-									<li class="text-gray fs-13 pb-3">Resolución Viceministerial Nº 003-2015-Minedu</li>
-									<li class="text-gray fs-13 pb-3">Docentes interinos</li>
+									<li class="pb-3">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</li>
+									<li class="pb-3">Competencia digital y currículo</li>
+									<li class="pb-3">Informe de Educación: preparando inicio de clases</li>
+									<li class="pb-3">Resolución Viceministerial Nº 003-2015-Minedu</li>
+									<li class="pb-3">Docentes interinos</li>
 								</ul>		
 							</div>	
-							<div class="col-md-12 bg-1 recursos mb-3">
-								<p class="font-Museo text-azul pb-3 fs-15 pt-3">LO MÁS COMENTADO</p>
+							<div class="col-md-12 bg-1 recursos mb-3 p-3 fs-13 text-gray">
+								<p class="font-Museo text-azul pb-3 pt-3">LO MÁS COMENTADO</p>
 								<ul type = disk class="pl-10">
-									<li class="text-gray fs-13 pb-3">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</li>
-									<li class="text-gray fs-13 pb-3">Competencia digital y currículo</li>
-									<li class="text-gray fs-13 pb-3">Informe de Educación: preparando inicio de clases</li>
-									<li class="text-gray fs-13 pb-3">Resolución Viceministerial Nº 003-2015-Minedu</li>
-									<li class="text-gray fs-13 pb-3">Docentes interinos</li>
+									<li class="pb-3">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</li>
+									<li class="pb-3">Competencia digital y currículo</li>
+									<li class="pb-3">Informe de Educación: preparando inicio de clases</li>
+									<li class="pb-3">Resolución Viceministerial Nº 003-2015-Minedu</li>
+									<li class="pb-3">Docentes interinos</li>
 								</ul>		
 							</div>	
-							<div class="col-md-12 bg-1 recursos mb-3">
-								<p class="font-Museo text-azul pb-3 fs-15 pt-3">ENLACES DE INTERÉS</p>
+							<div class="col-md-12 bg-1 recursos mb-3 p-3 fs-13 text-gray">
+								<p class="font-Museo text-azul pb-3 pt-3">ENLACES DE INTERÉS</p>
 								<ul type = disk class="pl-10">
-									<li class="text-gray fs-13 pb-3">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</li>
-									<li class="text-gray fs-13 pb-3">Competencia digital y currículo</li>
-									<li class="text-gray fs-13 pb-3">Informe de Educación: preparando inicio de clases</li>
-									<li class="text-gray fs-13 pb-3">Resolución Viceministerial Nº 003-2015-Minedu</li>
-									<li class="text-gray fs-13 pb-3">Docentes interinos</li>
+									<li class="pb-3">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</li>
+									<li class="pb-3">Competencia digital y currículo</li>
+									<li class="pb-3">Informe de Educación: preparando inicio de clases</li>
+									<li class="pb-3">Resolución Viceministerial Nº 003-2015-Minedu</li>
+									<li class="pb-3">Docentes interinos</li>
 								</ul>		
 							</div>							
 						</div>
