--- a/6webrecomendadas.html
+++ b/6webrecomendadas.html
@@ -23,19 +23,19 @@
 						</div>
 					</div>	
 					<div class="row">
-						<div class="col-md-4">
+						<div class="col-md-4 pl-1 pr-1">
 							<div class="imagen-inferior">
 								<img src="assets/images/imagen1.png" class="height-120">
 								<p class="parrafo">La conquista del Perú</p>								
 							</div>
 						</div>
-						<div class="col-md-4">
+						<div class="col-md-4 pl-1 pr-1">
 							<div class="imagen-inferior">
 								<img src="assets/images/imagen2.png" class="height-120">
 								<p class="parrafo">Perú Prehispánico</p>							
 							</div>
 						</div>
-						<div class="col-md-4">
+						<div class="col-md-4 pl-1 pr-1">
 							<div class="imagen-inferior">
 								<img src="assets/images/imagen3.png" class="height-120">
 								<p class="parrafo">Perú Republicano</p>								
@@ -43,19 +43,19 @@
 						</div>						
 					</div>					
 					<div class="row">
-						<div class="col-md-4">
+						<div class="col-md-4 pl-1 pr-1">
 							<div class="imagen-inferior">
 								<img src="assets/images/imagen4.png" class="height-120">
 								<p class="parrafo">El virreynato del Perú</p>								
 							</div>
 						</div>
-						<div class="col-md-4">
+						<div class="col-md-4 pl-1 pr-1">
 							<div class="imagen-inferior">
 								<img src="assets/images/imagen5.png" class="height-120">
 								<p class="parrafo">El siglo XVIII en el Perú</p>							
 							</div>
 						</div>
-						<div class="col-md-4">
+						<div class="col-md-4 pl-1 pr-1">
 							<div class="imagen-inferior">
 								<img src="assets/images/imagen6.png" class="height-120">
 								<p class="parrafo">Literatura Peruana</p>								
