--- a/13diasfundac.html
+++ b/13diasfundac.html
@@ -12,13 +12,13 @@
 		<section id="calendariocivico">
 			<div class="row">
 				<div class="col-md-12 titulo-20claves">
-					<div class="">
-						<h1 class="font-Museo text-azul">Días Fundación Telefónica</h1>
-						<h3 class="text-celeste p-m-0">La habilidad de enseñar y la enseñanza</h3>	
-						<h3 class="text-celeste p-m-0">de habilidades en el siglo XXI</h3>	
-						<p class="text-gray fs-15 pt-3"><strong>CAJAMARCA:</strong>&nbsp;Viernes 14 de noviembre de 2014</p>	
+					<div class="col-md-6">
+						<div class="texto-sobre-imagen">
+							<h1 class="font-Museo text-azul">Días Fundación Telefónica</h1>
+							<h3 class="text-celeste p-m-0">La habilidad de enseñar y la enseñanza de habilidades en el siglo XXI</h3>	
+							<p class="text-gray fs-15 pt-3"><strong>CAJAMARCA:</strong>&nbsp;Viernes 14 de noviembre de 2014</p>	
+						</div>
 					</div>
-
 				</div>
 			</div>
 			<div class="contenedor">
@@ -59,7 +59,7 @@
 					<div class="col-md-4 pl-2">
 						<div class="col-md-12">
 							<h4 class="font-Museo text-azul pb-3">Ciudad</h4>
-							<div class="col-md-12 bg-1 recursos mb-3">
+							<div class="col-md-12 bg-1 recursos mb-3 p-3">
 								<h5 class="font-Museo text-azul pb-3">CAJAMARCA</h5>
 								<p class="text-gray fs-15"><strong>Fecha:</strong>&nbsp;Viernes 14 de noviembre de 2014</p>
 								<p class="text-gray fs-15"><strong>Lugar:</strong>&nbsp;Hotel Costa del Sol.</p>	
@@ -69,7 +69,7 @@
 						</div>
 						<button type="button" class="btn btn-primary width-100 text-center m-4-0">INSCRÍBETE PARA CAJAMARCA</button>
 						<div class="col-md-12">
-							<div class="col-md-12 bg-1 recursos mb-3">
+							<div class="col-md-12 bg-1 recursos mb-3 p-3">
 								<h5 class="font-Museo text-azul pb-3">AREQUIPA</h5>
 								<p class="text-gray fs-15"><strong>Fecha:</strong>&nbsp;Viernes 24 de octubre de 2014</p>
 								<p class="text-gray fs-15"><strong>Lugar:</strong>&nbsp;Hotel Casa Andina.</p>	
@@ -78,7 +78,7 @@
 							</div>							
 						</div>
 						<div class="col-md-12">
-							<div class="col-md-12 bg-1 recursos mb-3">
+							<div class="col-md-12 bg-1 recursos mb-3 p-3">
 								<h5 class="font-Museo text-azul pb-3">TACNA</h5>
 								<p class="text-gray fs-15"><strong>Fecha:</strong>&nbsp;Viernes 17 de octubre de 2014</p>
 								<p class="text-gray fs-15"><strong>Lugar:</strong>&nbsp;Salón Bolognesi del Gran Hotel Tacna</p>	
@@ -89,11 +89,11 @@
 						<div class="col-md-12">
 							<h4 class="font-Museo text-azul pt-3 pb-3">Artículos Relacionados</h4>							
 						</div>
-						<div class="col-md-12 bg-1 recursos text-justify">
+						<div class="col-md-12 bg-1 recursos text-justify p-3">
 							<p class="text-gray fs-15"><a href="">Jóvenes, nivel educativo y empleo</a></p>
-							<p class="text-gray fs-15">En este artículo Hugo Díaz analiza el último informe de la Organización para la Cooperación y el Desarrollo Económicos (OCDE) sobre los niveles educativos y las calificaciones de la población, en especial de los jóvenes, para hacer frente al cambio de las estructuras del mercado de empleo. Una característica importante en épocas de crisis, como las que viven varios de los países miembros de esa organización, es el deseo de los jóvenes de calificarse antes de ingresar al mundo laboral.</p>	
+							<p class="text-gray fs-13">En este artículo Hugo Díaz analiza el último informe de la Organización para la Cooperación y el Desarrollo Económicos (OCDE) sobre los niveles educativos y las calificaciones de la población, en especial de los jóvenes, para hacer frente al cambio de las estructuras del mercado de empleo. Una característica importante en épocas de crisis, como las que viven varios de los países miembros de esa organización, es el deseo de los jóvenes de calificarse antes de ingresar al mundo laboral.</p>	
 							<p class="text-gray fs-15"><a href="">Preparar para el futuro: habilidades que los profesores deben trasmitir a sus alumnos</a></p>
-							<p class="text-gray fs-15">¿Qué habilidades deben inculcar los profesores a los jóvenes alumnos de miras al siglo XXI? Son cuatro habilidades en particular que en este siguiente artículo nos da una mirada de los retos que plantea el futuro a los más jóvenes.</p>
+							<p class="text-gray fs-13">¿Qué habilidades deben inculcar los profesores a los jóvenes alumnos de miras al siglo XXI? Son cuatro habilidades en particular que en este siguiente artículo nos da una mirada de los retos que plantea el futuro a los más jóvenes.</p>
 						</div>		
 					</div>
 				</div>				
