--- a/14-20claves.html
+++ b/14-20claves.html
@@ -48,7 +48,7 @@
 					</div>		
 					<div class="col-md-4 pl-2">
 						<h4 class="font-Museo text-azul pb-3">Ciudad</h4>
-						<div class="col-md-12 bg-1 recursos mb-3">
+						<div class="col-md-12 bg-1 recursos mb-3 p-3">
 							<h5 class="font-Museo text-azul pb-3">TRUJILLO</h5>
 							<p class="text-gray fs-15"><strong>Fecha:</strong>&nbsp;Martes 9 de setiembre de 2014</p>
 							<p class="text-gray fs-15"><strong>Lugar:</strong>&nbsp;Universidad Privada Antenor Orrego – Auditorio Pabellón H</p>	
@@ -58,12 +58,14 @@
 						<div class="col-md-12 pt-3 pb-3">
 							<p class="text-azulOscuro fs-15 text-center"><em>Se cerraron inscripciones</em></p>
 						</div>
-						<h4 class="font-Museo text-azul pb-3">Artículos Relacionados</h4>
-						<div class="col-md-12 bg-1 recursos text-justify">
+						<div class="col-md-12 p-3">
+							<h4 class="font-Museo text-azul">Artículos Relacionados</h4>
+						</div>
+						<div class="col-md-12 bg-1 recursos text-justify p-3">
 							<p class="text-gray fs-15"><a href="">Jóvenes, nivel educativo y empleo</a></p>
-							<p class="text-gray fs-15">En este artículo Hugo Díaz analiza el último informe de la Organización para la Cooperación y el Desarrollo Económicos (OCDE) sobre los niveles educativos y las calificaciones de la población, en especial de los jóvenes, para hacer frente al cambio de las estructuras del mercado de empleo. Una característica importante en épocas de crisis, como las que viven varios de los países miembros de esa organización, es el deseo de los jóvenes de calificarse antes de ingresar al mundo laboral.</p>	
+							<p class="text-gray fs-13 pb-3">En este artículo Hugo Díaz analiza el último informe de la Organización para la Cooperación y el Desarrollo Económicos (OCDE) sobre los niveles educativos y las calificaciones de la población, en especial de los jóvenes, para hacer frente al cambio de las estructuras del mercado de empleo. Una característica importante en épocas de crisis, como las que viven varios de los países miembros de esa organización, es el deseo de los jóvenes de calificarse antes de ingresar al mundo laboral.</p>	
 							<p class="text-gray fs-15"><a href="">Preparar para el futuro: habilidades que los profesores deben trasmitir a sus alumnos</a></p>
-							<p class="text-gray fs-15">¿Qué habilidades deben inculcar los profesores a los jóvenes alumnos de miras al siglo XXI? Son cuatro habilidades en particular que en este siguiente artículo nos da una mirada de los retos que plantea el futuro a los más jóvenes.</p>
+							<p class="text-gray fs-13">¿Qué habilidades deben inculcar los profesores a los jóvenes alumnos de miras al siglo XXI? Son cuatro habilidades en particular que en este siguiente artículo nos da una mirada de los retos que plantea el futuro a los más jóvenes.</p>
 						</div>		
 					</div>
 				</div>				
