--- a/15blog-home.html
+++ b/15blog-home.html
@@ -79,49 +79,49 @@
 							<p class="text-gray fs-15 pt-3 text-justify">Importante norma relacionada con los procesos de reasignación suspendidos hacen un buen tiempo por los diversos concursos de contrato de profesores. Como se sabe, la reasignación fue suspendida dejándose solo por motivos de salud. Como dice el artículo 1 .</p>
 							<p class="text-azul fs-15 text-right"><a href="">Leer más</a></p>
 							<p class="text-gray fs-15 pb-1"><a href="">Comentarios (6)</a></p>
-							<div class="separador m-2-0"></div>	
+							<div class="separador m-4-0"></div>	
 						</div>
-						<p class="text-gray fs-15 pb-1"><a href=""><span class="glyphicon glyphicon-arrow-left"</span>&nbsp;Entradas más antiguas</a></p>		
+						<p class="text-gray fs-15"><a href=""><span class="glyphicon glyphicon-arrow-left"</span>&nbsp;Entradas más antiguas</a></p>	
 					</div>
 					<div class="col-md-3 pl-2">
 						<div class="col-md-12 pt-3">
-							<div class="relative">
+							<div class="relative mb-3">
 								<img src="assets/images/jurado1.png">
 								<div class="titulo-destacado text-center">
-									<p class="font-Museo p-m-0 fs-15"><strong>HUGO DÍAZ</strong></p>
+									<h5 class="font-Museo p-m-0"><strong>HUGO DÍAZ</strong></h5>
 									<p class="fs-13">Autor del blog</p>
 								</div>
 							</div>
-							<p class="text-gray fs-13 m-4-0 text-justify">Soy planificador de la educación, especialista en el estudio y evaluación de políticas educativas. El Blog que les presento, sobre Desafíos de Educación Siglo XXI, tiene por finalidad analizar el estado actual de la educación en el Perú; en especial, la situación de la educación básica, la formación y el desarrollo profesional de los docentes. En ese contexto, se destacan los avances, las dificultades, las experiencias relevantes, los esfuerzos encaminados a consensuar estrategias, las posiciones encontradas."</p>
+							<p class="text-gray fs-13 pt-3 text-justify">Soy planificador de la educación, especialista en el estudio y evaluación de políticas educativas. El Blog que les presento, sobre Desafíos de Educación Siglo XXI, tiene por finalidad analizar el estado actual de la educación en el Perú; en especial, la situación de la educación básica, la formación y el desarrollo profesional de los docentes. En ese contexto, se destacan los avances, las dificultades, las experiencias relevantes, los esfuerzos encaminados a consensuar estrategias, las posiciones encontradas."</p>
 						</div>
-						<div class="col-md-12 bg-2 recursos m-4-0">
+						<div class="col-md-12 bg-2 recursos m-4-0 p-3 text-gray fs-13">
 							<p class="font-Museo text-azul pb-3 fs-15 pt-3">ENTRADAS RECIENTES</p>
 							<ul type = disk class="pl-10">
-								<li class="text-gray fs-13 pb-3">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</li>
-								<li class="text-gray fs-13 pb-3">Competencia digital y currículo</li>
-								<li class="text-gray fs-13 pb-3">Informe de Educación: preparando inicio de clases</li>
-								<li class="text-gray fs-13 pb-3">Resolución Viceministerial Nº 003-2015-Minedu</li>
-								<li class="text-gray fs-13 pb-3">Docentes interinos</li>
+								<li class="pb-3">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</li>
+								<li class="pb-3">Competencia digital y currículo</li>
+								<li class="pb-3">Informe de Educación: preparando inicio de clases</li>
+								<li class="pb-3">Resolución Viceministerial Nº 003-2015-Minedu</li>
+								<li class="pb-3">Docentes interinos</li>
 							</ul>		
 						</div>	
-						<div class="col-md-12 bg-1 recursos m-4-0">
+						<div class="col-md-12 bg-1 recursos m-4-0 p-3 text-gray fs-13">
 							<p class="font-Museo text-azul pb-3 fs-15 pt-3">COMENTARIOS RECIENTES</p>
 							<ul type = disk class="pl-10">
-								<li class="text-gray fs-13 pb-3">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</li>
-								<li class="text-gray fs-13 pb-3">Competencia digital y currículo</li>
-								<li class="text-gray fs-13 pb-3">Informe de Educación: preparando inicio de clases</li>
-								<li class="text-gray fs-13 pb-3">Resolución Viceministerial Nº 003-2015-Minedu</li>
-								<li class="text-gray fs-13 pb-3">Docentes interinos</li>
+								<li class="pb-3">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</li>
+								<li class="pb-3">Competencia digital y currículo</li>
+								<li class="pb-3">Informe de Educación: preparando inicio de clases</li>
+								<li class="pb-3">Resolución Viceministerial Nº 003-2015-Minedu</li>
+								<li class="pb-3">Docentes interinos</li>
 							</ul>		
 						</div>	
-						<div class="col-md-12 bg-2 recursos m-4-0">
+						<div class="col-md-12 bg-2 recursos m-4-0 p-3 text-gray fs-13">
 							<p class="font-Museo text-azul pb-3 fs-15 pt-3">ARCHIVOS</p>
 							<ul type = disk class="pl-10">
-								<li class="text-gray fs-13 pb-3">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</li>
-								<li class="text-gray fs-13 pb-3">Competencia digital y currículo</li>
-								<li class="text-gray fs-13 pb-3">Informe de Educación: preparando inicio de clases</li>
-								<li class="text-gray fs-13 pb-3">Resolución Viceministerial Nº 003-2015-Minedu</li>
-								<li class="text-gray fs-13 pb-3">Docentes interinos</li>
+								<li class="pb-3">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</li>
+								<li class="pb-3">Competencia digital y currículo</li>
+								<li class="pb-3">Informe de Educación: preparando inicio de clases</li>
+								<li class="pb-3">Resolución Viceministerial Nº 003-2015-Minedu</li>
+								<li class="pb-3">Docentes interinos</li>
 							</ul>		
 						</div>
 					</div>
